--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -839,5 +839,7 @@
   "The reward program has ended !": "โปรแกรมของขวัญแล้วเสร็จสิ้น !",
   "Webpage Subscription and Data Insights": "การสมัครสมาชิกหน้าเว็บและข้อมูลเชิงวิเคราะห์ข้อมูล",
   "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "ดึงข้อมูลเนื้อหาที่สมัครสมาชิกของหน้าเว็บโดยอัตโนมัติผ่านโมเดลขนาดใหญ่และทําการวิเคราะห์ข้อมูลเพื่อให้การติดตามข้อมูลในทันเวลาและความเข้าใจทางธุรกิจที่ลึกซึ้ง",
-  "Please enter the content according to the template: [Website URL][Analyze the website content]": "กรุณาใส่เนื้อหาในรูปแบบต่อไปนี้: [URL ของเว็บไซต์][วิเคราะห์เนื้อหาเว็บไซต์]"
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "กรุณาใส่เนื้อหาในรูปแบบต่อไปนี้: [URL ของเว็บไซต์][วิเคราะห์เนื้อหาเว็บไซต์]",
+  "Tell me what the web page is about": "บอกว่าเนื้อหาในหน้าเว็บคืออะไร",
+  "Write an original article referring to the web page": "เขียนเนื้อหาใหม่โดยอ้างอิงหน้าเว็บ"
 }
