--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -840,5 +840,7 @@
   "The reward program has ended !": "O programa de recompensas terminou !",
   "Webpage Subscription and Data Insights": "Assinatura de Página da Web e Insights de Dados",
   "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Rastreie automaticamente o conteúdo assinado das páginas da web por meio de grandes modelos e realize análises de dados para alcançar o acompanhamento de informações em tempo real e insights empresariais profundos.",
-  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Por favor, insira o conteúdo de acordo com o modelo: [URL do site][Analisar o conteúdo do site]"
+  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Por favor, insira o conteúdo de acordo com o modelo: [URL do site][Analisar o conteúdo do site]",
+  "Tell me what the web page is about": "Fale o que a página da web fala",
+  "Write an original article referring to the web page": "Escreva um conteúdo original com base na página da web"
 }
