--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -840,7 +840,7 @@
   "The reward program has ended !": "",
   "Webpage Subscription and Data Insights": "",
   "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "",
-  "Please enter the content according to the template: [Website URL][Analyze the website content]": "",
+  "Please paste the website domain name: URL": "",
   "Tell me what the web page is about": "",
   "Write an original article referring to the web page": ""
 }
