--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -829,7 +829,7 @@
   "The reward program has ended !": "Chương trình thưởng đã kết thúc !",
   "Webpage Subscription and Data Insights": "Đăng ký trang web và những cái nhìn về dữ liệu",
   "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Tự động thu thập nội dung của các trang web đã đăng ký thông qua các mô hình lớn và thực hiện phân tích dữ liệu để đạt được việc theo dõi thông tin trực tiếp và những cái nhìn về kinh doanh sâu sắc.",
-  "Please enter the content according to the template: [Website URL][Analyze the website content]": "Vui lòng nhập nội dung theo mẫu: [Địa chỉ URL của trang web][Phân tích nội dung của trang web]",
+  "Please paste the website domain name: URL": "Vui lòng dán tên miền của trang web: địa chỉ web",
   "Tell me what the web page is about": "Nói về nội dung của trang web đi",
   "Write an original article referring to the web page": "Viết một nội dung gốc dựa trên trang web"
 }
