--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -835,11 +835,13 @@
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Количество попыток превысило лимит. Пожалуйста, 업грейдите до VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Количество попыток превысило лимит. Пожалуйста, выполните процедуру идентификации KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Количество попыток превысило лимит. Пожалуйста, создайте кошелек.",
-  "Summarize web content": "Сократить содержание веб-страницы",
   "The reward program has ended !": "Программа вознаграждений завершена !",
   "Webpage Subscription and Data Insights": "Подписка на веб - страницы и аналитика данных",
-  "Automatically crawl the subscribed content of webpages through large models and conduct data analysis to achieve real-time information tracking and in-depth business insights.": "Автоматически собирать подписку на контент веб - страниц с помощью крупных моделей и проводить анализ данных для достижения реального времени отслеживания информации и глубоких бизнес - аналитических выводов.",
-  "Please paste the website domain name: URL": "Пожалуйста, вставьте имя домена веб-сайта: адрес веб-сайта",
+  "Automatically crawl the subscribed content on web pages through a large model and conduct data analysis.": "Автоматически собирать подписки на веб - страницах с использованием крупной модели и проводить анализ данных.",
+  "Please paste the website domain name": "Пожалуйста, вставьте имя домена веб-сайта",
+  "Analyze the content of the web page": "Анализировать контент веб-страницы",
+  "Summarize the web page": "Сводить в резюме веб-страницу",
+  "Extract the key data from the web page": "Извлекать ключевые данные с веб-страницы",
   "Tell me what the web page is about": "Расскажи, о чём идёт речь на веб - странице",
   "Write an original article referring to the web page": "Напишите оригинальный текст, используя веб - страницу в качестве источника"
 }
