--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Cuando un nodo de acceso se encuentra en una región específica, se conectará de forma preferente por defecto a los nodos de computación GPU de la misma región, reduciendo la latencia y mejorando el rendimiento.",
   "Download DeGPT to obtain rewards": "Descarga DeGPT para obtener recompensas.",
   "Switch Models": "Cambiar modelos",
-  "Suitable for most tasks": "Adecuado para la mayoría de las tareas",
+  "Suitable for most tasks, taking photos to solve math problems.": "Adecuado para la mayoría de las tareas, resolver problemas matemáticos tomando fotos.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Apto para la mayoría de las tareas, Rendimiento comparable al de GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pensamiento profundo, habilidades matemáticas y de escritura ≈ o3, resolver problemas matemáticos tomando fotos.",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Pensamiento profundo, habilidades matemáticas y de escritura ≈ o3.",
   "Support image recognition": "Soporte para el reconocimiento de imágenes",
   "Optimize code writing": "Optimizar la escritura de código",
   "Please select at least one model.": "Por favor, seleccione al menos un modelo.",
