--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "접속 노드가 특정 지역에 위치할 때, 기본적으로 동일 지역의 GPU 계산 노드에 우선적으로 연결되어 지연을 줄이고 성능을 향상시킵니다.",
   "Download DeGPT to obtain rewards": "보상을 받기 위해 DeGPT를 다운로드하세요.",
   "Switch Models": "모델 전환",
-  "Suitable for most tasks": "대부분의 작업에 적합합니다",
+  "Suitable for most tasks, taking photos to solve math problems.": "대부분의 작업에 적합합니다, 사진을 찍어 수학 문제를 해결할 수 있습니다",
   "Suitable for most tasks,Performance comparable to GPT-4o": "대부분의 작업에 적합합니다, 성능은 GPT-4o 과 견줍니다",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "깊은 사고, 수학적 능력과 창작 능력은 o3과 비슷하며, 사진을 찍어 수학 문제를 해결할 수 있습니다",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "깊은 사고, 수학적 능력과 창작 능력은 o3과 비슷하며.",
   "Support image recognition": "이미지 인식을 지원합니다",
   "Optimize code writing": "코드 작성 최적화합니다",
   "Please select at least one model.": "적어도 하나의 모델을 선택하세요.",
