--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Quando um nó de acesso estiver localizado em uma região específica, ele se conectará preferencialmente, por padrão, aos nós de computação GPU da mesma região, reduzindo a latência e melhorando o desempenho.",
   "Download DeGPT to obtain rewards": "Faça o download do DeGPT para obter recompensas.",
   "Switch Models": "Mudar modelos",
-  "Suitable for most tasks": "Apropriado para a maioria das tarefas",
+  "Suitable for most tasks, taking photos to solve math problems.": "Apropriado para a maioria das tarefas, resolver problemas matemáticos tirando fotos.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Adequado para a maioria das tarefas, Desempenho comparável ao do GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3, resolver problemas matemáticos tirando fotos",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3.",
   "Support image recognition": "Suporte para o reconhecimento de imagens",
   "Optimize code writing": "Otimizar a escrita de código",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
