--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -687,9 +687,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Когда узел доступа находится в определенной области, по умолчанию он предпочтительно подключается к узлам вычислений на GPU в той же области, снижая задержку и повышая производительность.",
   "Download DeGPT to obtain rewards": "Загрузите DeGPT для получения вознаграждений.",
   "Switch Models": "Переключить модели",
-  "Suitable for most tasks": "Подходит для большинства задач",
+  "Suitable for most tasks, taking photos to solve math problems.": "Подходит для большинства задач, решение математических задач с помощью фотографирования.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Подходит для большинства задач, Производительность сравнима с GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Глубокое мышление, математические и писательские способности ≈ o3, решение математических задач с помощью фотографирования",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Глубокое мышление, математические и писательские способности ≈ o3.",
   "Support image recognition": "Поддерживает распознавание изображений",
   "Optimize code writing": "Оптимизировать написание кода",
   "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
