--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "",
   "Download DeGPT to obtain rewards": "",
   "Switch Models": "",
-  "Suitable for most tasks": "",
+  "Suitable for most tasks, taking photos to solve math problems.": "",
   "Suitable for most tasks,Performance comparable to GPT-4o": "",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "",
   "Support image recognition": "",
   "Optimize code writing": "",
   "Please select at least one model.": "",
