--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -687,9 +687,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Lorsqu'un nœud d'accès est situé dans une région spécifique, il se connectera par défaut de manière préférentielle aux nœuds de calcul GPU de la même région, réduisant la latence et améliorant les performances.",
   "Download DeGPT to obtain rewards": "Téléchargez DeGPT pour obtenir des récompenses.",
   "Switch Models": "Changer de modèles",
-  "Suitable for most tasks": "Adapté à la plupart des tâches",
+  "Suitable for most tasks, taking photos to solve math problems.": "Adapté à la plupart des tâches, résoudre des problèmes mathématiques en prenant des photos.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Adapté à la plupart des tâches, Performances comparables à celles de GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3, résoudre des problèmes mathématiques en prenant des photos",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3.",
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
