--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Ketika sebuah node akses berada di suatu wilayah tertentu, secara default akan lebih dahulu terhubung ke node komputasi GPU di wilayah yang sama, sehingga mengurangi latensi dan meningkatkan kinerja.",
   "Download DeGPT to obtain rewards": "Unduh DeGPT untuk mendapatkan hadiah.",
   "Switch Models": "Ganti model",
-  "Suitable for most tasks": "Cocok untuk sebagian besar tugas",
+  "Suitable for most tasks, taking photos to solve math problems.": "Cocok untuk sebagian besar tugas, menyelesaikan masalah matematika dengan mengambil foto.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Cocok untuk sebagian besar tugas, Kinerja sebanding dengan GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3, menyelesaikan masalah matematika dengan mengambil foto",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3.",
   "Support image recognition": "Mendukung pengenalan gambar",
   "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
