--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "アクセスノードが特定の地域に位置する場合、デフォルトでは同じ地域の GPU コンピューティングノードに優先的に接続し、遅延を低減し、性能を向上させます。",
   "Download DeGPT to obtain rewards": "報酬を得るために DeGPT をダウンロードしてください。",
   "Switch Models": "モデルを切り替える",
-  "Suitable for most tasks": "多くのタスクに適しています",
+  "Suitable for most tasks, taking photos to solve math problems.": "多くのタスクに適しています、写真を撮って数学の問題を解くことができます",
   "Suitable for most tasks,Performance comparable to GPT-4o": "ほとんどのタスクに適しています, 性能は GPT-4o に匹敵します",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "深い思考、数学的能力と執筆能力は o3 に匹敵し、写真を撮って数学の問題を解くことができます",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "深い思考、数学的能力と執筆能力は o3 に匹敵し",
   "Support image recognition": "画像認識をサポートしています",
   "Optimize code writing": "コードの書き方を最適化します",
   "Please select at least one model.": "少なくとも 1 つのモデルを選択してください。",
