--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -687,9 +687,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "เมื่อโหนดการเข้าถึงตั้งอยู่ในพื้นที่เฉพาะบางแห่ง โหนดจะเชื่อมต่อกับโหนดคำนวณ GPU ในพื้นที่เดียวกันโดยค่าเริ่มต้นในลำดับความสำคัญ เพื่อลดความล่าช้าและเพิ่มประสิทธิภาพ",
   "Download DeGPT to obtain rewards": "ดาวน์โหลด DeGPT เพื่อรับรางวัล",
   "Switch Models": "สลับแบบจำลอง",
-  "Suitable for most tasks": "เหมาะสำหรับงานส่วนใหญ่",
+  "Suitable for most tasks, taking photos to solve math problems.": "เหมาะสำหรับงานส่วนใหญ่ แก้โจทย์คณิตศาสตร์ด้วยการถ่ายรูป",
   "Suitable for most tasks,Performance comparable to GPT-4o": "เหมาะสำหรับงานส่วนใหญ่ ความสามารถเปรียบเทียบได้กับ GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "ความคิดลึกซึ้ง ความสามารถทางคณิตศาสตร์และทางการเขียน ≈ o3 แก้โจทย์คณิตศาสตร์ด้วยการถ่ายรูป",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "ความคิดลึกซึ้ง ความสามารถทางคณิตศาสตร์และทางการเขียน ≈ o3",
   "Support image recognition": "รองรับการจำแนกภาพ",
   "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
   "Please select at least one model.": "กรุณาเลือกแบบจำลองอย่างน้อยหนึ่งแบบ",
