--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Erişim düğümü belirli bir bölgede yer alırken, varsayılan olarak aynı bölgedeki GPU hesaplama düğümlerine öncelikli olarak bağlanır, gecikmeyi azaltır ve performansı artırır.",
   "Download DeGPT to obtain rewards": "Ödüller almak için DeGPT'yi indirin.",
   "Switch Models": "Model Değiştir",
-  "Suitable for most tasks": "Çoğu görev için uygundur",
+  "Suitable for most tasks, taking photos to solve math problems.": "Çoğu görev için uygundur, matematik problemlerini fotoğraf çekerek çözebilir.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Çoğu görev için uygundur, Performansı GPT-4o ile karşılaştırılabilir",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Derin düşünme, matematiksel ve yazı yazma yetenekleri ≈ o3, matematik problemlerini fotoğraf çekerek çözebilir",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Derin düşünme, matematiksel ve yazı yazma yetenekleri ≈ o3.",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
