--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -688,9 +688,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Khi một nút truy cập nằm trong một khu vực cụ thể, nó sẽ ưu tiên kết nối đến các nút tính toán GPU trong cùng khu vực đó theo mặc định, giảm độ trễ và nâng cao hiệu suất.",
   "Download DeGPT to obtain rewards": "Tải xuống DeGPT để nhận phần thưởng.",
   "Switch Models": "Chuyển đổi mô hình",
-  "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
+  "Suitable for most tasks, taking photos to solve math problems.": "Thích hợp cho hầu hết các nhiệm vụ, giải quyết các bài toán Toán bằng cách chụp ảnh.",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Phù hợp cho hầu hết các nhiệm vụ. Hiệu năng tương đương với GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Tư duy sâu sắc, khả năng toán học và năng lực viết văn xunge o3, giải quyết các bài toán Toán bằng cách chụp ảnh",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "Tư duy sâu sắc, khả năng toán học và năng lực viết văn xunge o3.",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
