--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -687,9 +687,9 @@
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "当接入节点位于某个特定区域时，其默认优先连接至同区域 的GPU计算节点，降低延迟，提升性能。",
   "Download DeGPT to obtain rewards": "下载 DeGPT 以便获得奖励",
   "Switch Models": "切换模型",
-  "Suitable for most tasks": "适用于大多数任务",
+  "Suitable for most tasks, taking photos to solve math problems.": "适用于大多数任务, 可拍照解数学题。",
   "Suitable for most tasks,Performance comparable to GPT-4o": "适用于大多数任务，性能比肩GPT-4o",
-  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "深度思考，在数学、创意写作等任务性能上比肩o3, 可拍照解数学题",
+  "Deep thinking,mathematical and writing abilities ≈ o3.": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "Support image recognition": "支持图片识别",
   "Optimize code writing": "优化写代码功能",
   "Please select at least one model.": "请至少选择一个模型。",
