--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -844,5 +844,10 @@
   "Summarize the web page": "웹 페이지를 요약합니다",
   "Extract the key data from the web page": "웹 페이지에서 핵심 데이터를 추출합니다",
   "Tell me what the web page is about": "웹 페이지가 무슨 내용인지 말해 봐",
-  "Write an original article referring to the web page": "웹 페이지를 참고하여 원고 컨텐츠를 작성합니다"
+  "Write an original article referring to the web page": "웹 페이지를 참고하여 원고 컨텐츠를 작성합니다",
+  "Summarize the content of this document”：이 문서의 내용을 요약하세요",
+  "Generate a brief summary": "간단한 요약을 작성하세요",
+  "Extract document key info": "문서의 중요 정보를 추출하세요",
+  "Polish the content of the document": "문서의 내용을 정리합니다",
+  "Generate an analysis report": "분석 보고서를 작성하세요"
 }
