--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -849,5 +849,8 @@
   "Generate a brief summary": "Genere un resumen breve",
   "Extract document key info": "Extraiga la información clave del documento",
   "Polish the content of the document": "Mejore el contenido del documento",
-  "Generate an analysis report": "Genere un informe de análisis"
+  "Generate an analysis report": "Genere un informe de análisis",
+  "Introduce the code in the file": "Presenta el código en el archivo",
+  "What's the main purpose of the file's code": "¿Cuál es el propósito principal del código del archivo",
+  "Optimize the code in the file": "Optimiza el código en el archivo"
 }
