--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -849,5 +849,8 @@
   "Generate a brief summary": "簡単な要約を作成してください",
   "Extract document key info": "文書の重要な情報を抽出してください",
   "Polish the content of the document": "文書の内容を磨きます",
-  "Generate an analysis report": "分析レポートを作成してください"
+  "Generate an analysis report": "分析レポートを作成してください",
+  "Introduce the code in the file": "ファイル内のコードを説明してください",
+  "What's the main purpose of the file's code": "ファイルのコードの主な目的は何ですか",
+  "Optimize the code in the file": "ファイル内のコードを最適化してください"
 }
