--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -849,5 +849,8 @@
   "Generate a brief summary": "간단한 요약을 작성하세요",
   "Extract document key info": "문서의 중요 정보를 추출하세요",
   "Polish the content of the document": "문서의 내용을 정리합니다",
-  "Generate an analysis report": "분석 보고서를 작성하세요"
+  "Generate an analysis report": "분석 보고서를 작성하세요",
+  "Introduce the code in the file": "파일의 코드를 소개하세요",
+  "What's the main purpose of the file's code": "파일 코드의 주요 목적은 무엇입니까",
+  "Optimize the code in the file": "파일의 코드를 최적화하세요"
 }
