--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -849,5 +849,8 @@
   "Generate a brief summary": "Gere um resumo breve",
   "Extract document key info": "Extraia as informações-chave deste documento",
   "Polish the content of the document": "Aprimore o conteúdo deste documento",
-  "Generate an analysis report": "Gere um relatório de análise"
+  "Generate an analysis report": "Gere um relatório de análise",
+  "Introduce the code in the file": "Apresente o código no arquivo",
+  "What's the main purpose of the file's code": "Qual é o principal objetivo do código do arquivo",
+  "Optimize the code in the file": "Otimize o código no arquivo"
 }
