--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -848,5 +848,8 @@
   "Generate a brief summary": "生成一个简短概要",
   "Extract document key info": "提取文档关键信息",
   "Polish the content of the document": "对文档内容进行润色",
-  "Generate an analysis report": "生成分析报告"
+  "Generate an analysis report": "生成分析报告",
+  "Introduce the code in the file": "介绍文件中的代码",
+  "What's the main purpose of the file's code": "文件中的代码的主要用途是什么",
+  "Optimize the code in the file": "优化文件中的代码"
 }
