--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -852,6 +852,7 @@
   "Generate an analysis report": "",
   "Introduce the code in the file": "",
   "What's the main purpose of the file's code": "",
-  "Optimize the code in the file": ""
+  "Optimize the code in the file": "",
+  "In web page parsing...": ""
 }
 
