--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -852,5 +852,6 @@
   "Generate an analysis report": "Buat laporan analisis",
   "Introduce the code in the file": "Perkenalkan kode dalam file",
   "What's the main purpose of the file's code": "Apa tujuan utama kode file",
-  "Optimize the code in the file": "Optimalkan kode dalam file"
+  "Optimize the code in the file": "Optimalkan kode dalam file",
+  "In web page parsing...": "Saat menguraikan halaman web..."
 }
