--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -851,5 +851,6 @@
   "Generate an analysis report": "สร้างรายงานวิเคราะห์",
   "Introduce the code in the file": "แนะนำรหัสในไฟล์",
   "What's the main purpose of the file's code": "วัตถุประสงค์หลักของรหัสในไฟล์คืออะไร",
-  "Optimize the code in the file": " tối ưuรหัสในไฟล์"
+  "Optimize the code in the file": " tối ưuรหัสในไฟล์",
+  "In web page parsing...": "ในการวิเคราะห์หน้าเว็บ..."
 }
