--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -841,5 +841,6 @@
   "Generate an analysis report": "Tạo một bản báo cáo phân tích",
   "Introduce the code in the file": "Giới thiệu mã trong tệp",
   "What's the main purpose of the file's code": "Mục đích chính của mã trong tệp là gì",
-  "Optimize the code in the file": "Tối ưu mã trong tệp"
+  "Optimize the code in the file": "Tối ưu mã trong tệp",
+  "In web page parsing...": "Trong quá trình phân tích trang web..."
 }
