--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -852,5 +852,6 @@
   "Generate an analysis report": "Genere un informe de análisis",
   "Introduce the code in the file": "Presenta el código en el archivo",
   "What's the main purpose of the file's code": "¿Cuál es el propósito principal del código del archivo",
-  "Optimize the code in the file": "Optimiza el código en el archivo"
+  "Optimize the code in the file": "Optimiza el código en el archivo",
+  "In web page parsing...": "Al analizar páginas web..."
 }
